@@ -246,6 +246,10 @@ Bug Fixes
   headers, and the data if possible.  Saving changes to such a file should not
   try to prepend an unwanted valid PRIMARY HDU. (#157)
 
+- Fixed a bug where opening an image with ``disable_image_compression = True``
+  caused compression to be disabled for all subsequent ``pyfits.open()``.
+  (r1651)
+
 
 3.0.7 (2012-04-10)
 ----------------------
